2003-07-17  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf-value.h: flags can't be 0, patch from 
	Greg Hudson, #117712

2003-06-24  Mohammad DAMT  <mdamt@bisnisweb.com>

	* po/id.po: Added Indonesian translation
	* configure.in: Added "id" to ALL_LINGUAS

2003-06-02  Havoc Pennington  <hp@redhat.com>

	* NEWS: update

	* configure.in: 2.2.1

2003-05-07  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-03-26  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "yi" to ALL_LINGUAS.

2003-03-20  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added 'hi' for Hindi and 
	'ml' for Malayalam in ALL_LINGUAS

2003-03-04  Mark McLoughlin  <mark@skynet.ie>

	Fixes weird bug where a directory appears to not exist when
	you create subdirectories of it.

	* backends/xml-cache.c:
	(cache_lookup): use unset_nonexistent.
	(cache_unset_nonexistent): unset the existent flag not
	only on this directory but all parent directories.

2003-02-22  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-02-12  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconf.c: (gconf_engine_set),
	(gconf_engine_associate_schema): don't rely on
	caller passing in a valid GError** in assertions.

2003-02-12  Mark McLoughlin  <mark@skynet.ie>

	* backends/xml-dir.c: (listify_foreach): set the schema
	name even when the key is set.

2003-01-29  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added am, mk to ALL_LINGUAS

2003-01-21  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mn" to ALL_LINGUAS.

2003-01-20  Havoc Pennington  <hp@pobox.com>

        * NEWS: update
	
	* configure.in: 2.2.0

2003-01-12  Havoc Pennington  <hp@pobox.com>

	* configure.in: 2.1.90

2002-12-04  Havoc Pennington  <hp@pobox.com>

	* backends/markup-tree.c (markup_entry_get_value): fix 
	a logic error causing us to deref a null pointer, reported 
	by  Brian Alexander Quistorff
